fix(VerticalTabs): restore vertical spacing between tabs (#688)
affects: patternfly-react-extensions

Prior to #664, the vertical spacing between tabs was larger.  This PR restores it to what it was.

Fixes #687

--- a/packages/patternfly-3/patternfly-react-extensions/sass/patternfly-react-extensions/_vertical-tabs.scss
+++ b/packages/patternfly-3/patternfly-react-extensions/sass/patternfly-react-extensions/_vertical-tabs.scss
@@ -11,7 +11,7 @@
     color: $vertical-tab-pf-color;
     display: inline-block;
     font-size: 13px;
-    padding-left: 15px;
+    padding: 3px 6px 3px 15px;
     vertical-align: top;
     width: 100%;
     word-break: break-word;
